--- a/PsychoApp_BackEnd/Properties/launchSettings.json
+++ b/PsychoApp_BackEnd/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5087",
+      "applicationUrl": "http://192.168.1.5:5087",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7177;http://localhost:5087",
+      "applicationUrl": "https://192.168.1.5:7177;http:// 192.168.1.5:5087",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -25,7 +25,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://192.168.90.25:56118/",
+      "applicationUrl": "http://192.168.1.5:56118/",
       "sslPort": 44311
     }
   }
