fix tailwind bug

--- a/PsychoApp_AdminPanel/angular.json
+++ b/PsychoApp_AdminPanel/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "admin-panel": {
+    "PsychoApp_AdminPanel": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/admin-panel",
+            "outputPath": "dist/psycho-app-admin-panel",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "admin-panel:build:production"
+              "buildTarget": "PsychoApp_AdminPanel:build:production"
             },
             "development": {
-              "buildTarget": "admin-panel:build:development"
+              "buildTarget": "PsychoApp_AdminPanel:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -97,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
