--- a/PsychoApp_AdminPanel/package.json
+++ b/PsychoApp_AdminPanel/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tailwindcss-rtl": "^0.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
